err/dj-kits.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/dj_kits'...
Listing './lib/python3.5/site-packages/dj_kits/autocomplete_light'...
Listing './lib/python3.5/site-packages/dj_kits/decorators'...
Compiling './lib/python3.5/site-packages/dj_kits/decorators/__init__.py'...
***   File "./lib/python3.5/site-packages/dj_kits/decorators/__init__.py", line 71
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dj_kits/magicpages'...
Listing './lib/python3.5/site-packages/dj_kits/templatetags'...
Compiling './lib/python3.5/site-packages/dj_kits/templatetags/dj_kit_tags.py'...
***   File "./lib/python3.5/site-packages/dj_kits/templatetags/dj_kit_tags.py", line 67
    raise template.TemplateSyntaxError, "%r tag requires at least one argument" % template_tag
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dj_kits/utils'...
Compiling './lib/python3.5/site-packages/dj_kits/utils/html.py'...
***   File "./lib/python3.5/site-packages/dj_kits/utils/html.py", line 17
    text = re.sub(ur'''<a.*?href=['"](?P<url>https?://(\w*:\w*@)?[-\w.]+(:\d+)?(/([\w/_.]*(\?\S+)?)?)?)[\w_>].*<\/a>''',
                                                                                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dj_kits-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './share'...
Listing './share/python-wheels'...
